--- a/static/login.css
+++ b/static/login.css
@@ -63,7 +63,7 @@ body {
 .button_login {
     color: #fff;
 }
-
+/*
 .button_login {
     padding: 6px 24px;
     border: 2px solid #fff;
@@ -73,10 +73,11 @@ body {
     cursor: pointer;
 
 }
+
 .button_login:active {
     transform: scale(0.98);
 }
-
+*/
 .form_container {
     position: absolute;
     max-width: 320px;
@@ -89,11 +90,10 @@ body {
     padding: 25px;
     border-radius: 12px;
     box-shadow: rgba(0, 0, 0, 0.1);
-    opacity: 0;
-    pointer-events: none;
-    transition: all 0.4s ease-out;
+   
+   
 }
-
+/*
 #form_close{
     position: absolute;
     top: 10px;
@@ -102,7 +102,7 @@ body {
     opacity: 0.7;
     cursor: pointer;
 
-}
+}*/
 
 .form_container h2 {
     font-size: 22px;
@@ -242,6 +242,7 @@ body {
     opacity: 1;
 }
 
+
 .signup_form {
     display: none;
 }
@@ -253,3 +254,5 @@ body {
 .form_container.active .login_form{
     display: none;
 }
+
+
