--- a/templates/modulo_cotizador.html
+++ b/templates/modulo_cotizador.html
@@ -248,6 +248,9 @@
 
     <script src="{{ url_for('static', filename='script/dashboard.js') }}"></script>
 
+    <script src="{{ url_for('static', filename='script/sweetalert.min.js') }}"></script>
+
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
  
