--- a/templates/portalPago.html
+++ b/templates/portalPago.html
@@ -3,12 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js">
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js">
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js">
-    </script>
 
     <title>Facturacion digital </title>
 
@@ -23,7 +17,7 @@
         <div class="py-5 text-center">
           
           <h2>Facturacion Digital</h2>
-          <p class="lead">Este modulo esta orientado a los datos de la factura correspondiente , Por favor ingrese los siguientes datos.</p>
+          <p class="lead">datos  de  factura  ,  por Favor    ingrese  sus   datos.</p>
         </div>
       
         <div class="row">
@@ -35,7 +29,7 @@
             <ul class="list-group mb-3">
               <li class="list-group-item d-flex justify-content-between lh-condensed">
                 <div>
-                  <h6 class="my-0" id="contenido_variable">SISTEMA COTIZACION : </h6>
+                  <h6 class="my-0" id="contenido_variable">SISTEMA  COTIZACION : </h6>
                   <small class="text-muted" id="contenido_variable">DESCRIPCION : Sistema Hipotecario u Sistema Automotriz</small>
                 </div>
                 <span class="text-muted" id="contenido_variable">$2.500.000</span>
@@ -231,12 +225,25 @@
         </footer>
       </div>
 
+      <script src="https://smtpjs.com/v3/smtp.js"></script>
+
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+      </script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js">
+      </script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js">
+      </script>
+
+      <script src="{{ url_for('static', filename='script/sweetalert.min.js') }}"></script>
+
+      <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
       <!-- jspdf library -->
       <script  src = "https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
-      <script src="{{ url_for('static', filename='script/portalPago.js') }}"></script>
+      <script src="{{ url_for('static', filename='script/portalPago.js') }}" type="module"></script>
 
-
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+ 
 </body>
 </html>
