--- a/templates/portalPago.html
+++ b/templates/portalPago.html
@@ -17,7 +17,7 @@
         <div class="py-5 text-center">
           
           <h2>Facturacion Digital</h2>
-          <p class="lead">datos  de  factura  ,  por Favor    ingrese  sus   datos.</p>
+          <p class="lead">datos  de  factura  ,  por Favor    ingrese  sus    datos.</p>
         </div>
       
         <div class="row">
@@ -39,6 +39,14 @@
               <li class="list-group-item d-flex justify-content-between">
                 <span id="contenido_variable">Total (CLP)</span>
                 <strong id="contenido_variable">$3.700.000</strong>
+                <form class="card p-2">
+                  <div class="input-group">
+                    <button type="submit" class="btn btn-secondary"  id="boton_comprar">
+                      Comprar
+                    </button>
+                  </div>
+
+                </form>
               </li>
             </ul>
       
