validacion_archivo_cotizacion_sql_python

--- a/templates/crud_cotizador.html
+++ b/templates/crud_cotizador.html
@@ -188,17 +188,17 @@
 
         
         <div class="crud">
-            <table id="example" class="display" style="width:100%">
+            <table  id="example" class="display" style="width:100%">
                 <thead>
                       <!--definir mis campos para el crud (nombre , direccion , email, Sistema_descripcion,fecha , estado , opciones )-->
                     <tr>
-                        <th>Nombre_Cliente</th>
-                        <th>Email_Cliente</th>
-                        <th>Direccion</th>
-                        <th>Sistema_Descripcion</th>
-                        <th>Fecha</th>
-                        <th>archivo_cotizacion</th>
-                        <th>Estado</th>
+                        <th name="nombre">Nombre_Cliente</th>
+                        <th name="email">Email_Cliente</th>
+                        <th name="direccion">Direccion</th>
+                        <th name="descripcion">Sistema_Descripcion</th>
+                        <th name="fecha">Fecha</th>
+                        <th name="Cotizacion">archivo_cotizacion</th>
+                        <th name="estado">Estado</th>
                     </tr>
                 </thead>
                 <tbody>
