--- a/templates/index.html
+++ b/templates/index.html
@@ -566,14 +566,14 @@
                 <script src="{{ url_for('static', filename='script/readCsv.js') }}" type="module"></script>
                
                 
-                <form  method="POST" action="upload"  id="form" target="_blank" enctype="multipart/form-data">
+                <!--form  method="POST" action="upload"  id="form" target="_blank" enctype="multipart/form-data">
                 
                     <input id="tabla" name="archivo" type="file">
 
                     <div id="imagen"></div>
                     
                     <input id="enviar" name="enviar" type="submit" value="Enviar" class="btn btn-primary" >
-                </form>
+                </form-->
                   
                   
                   
@@ -733,7 +733,7 @@
 
 
     
-    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <!--script src="https://smtpjs.com/v3/smtp.js"></script-->
 
     <script src="{{ url_for('static', filename='script/enviarExcel.js') }}" type="module"></script>
 
